[tool.poetry]
name = "ASGI Signing Middleware Docs"
version = "0.1.0"
description = "Documentation for ASGI Signing Middleware"
authors = ["HacKan <hackan@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = ">=1.3.0"
mkdocs-material = "^8"
mkdocstrings = {extras = ["python"], version = ">0.18,^0"}

[tool.poetry.dev-dependencies]
asgi-signing-middleware = {path = "../", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
